[package]
name = "index-ext"
description = "Index slices with arbitrary ints and as arrays."
license = "Apache-2.0 OR MIT OR Zlib"
version = "0.0.2"
authors = ["Andreas Molzer <andreas.molzer@gmx.de>"]
edition = "2018"

readme = "Readme.md"
documentation = "https://docs.rs/index-ext"
homepage = "https://github.com/HeroicKatora/index-ext"
repository = "https://github.com/HeroicKatora/index-ext"

categories = ["data-structures", "embedded", "no-std", "rust-patterns"]
keywords = ["index", "extension", "int-index", "array-index"]

[dependencies]
generativity = "1"

[dev-dependencies]
libc = "0.2"

[features]
# Activate some additional operations that require nightly
nightly = []
alloc = []

[[example]]
name = "huffman-buffer"
required-features = ["alloc"]

[package.metadata.docs.rs]
all-features = true
